objects/FSLABB_Integration_Notification__mdt.object
<CustomObject>
    <fields>
        <fullName>FSLABB_General_Status_API_Name__c</fullName>
        <description>General status for this record (non-integration specific)</description>
        <label>General Status API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_General_Status_Value__c</fullName>
        <label>General Status Value</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_IntegrationSystem__c</fullName>
        <label>Integration System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSLABB_Process__c</fullName>
        <label>Process</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_Status_API_Name__c</fullName>
        <label>Status API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSLABB_Status_Value__c</fullName>
        <label>Status Value</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected by ServIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received from ServIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed in SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linked with SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received from SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received by ServIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Exception</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Success</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Integration Notification Status</label>
    <listViews>
        <fullName>AllRecords</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>FSLABB_General_Status_API_Name__c</columns>
        <columns>FSLABB_General_Status_Value__c</columns>
        <columns>FSLABB_IntegrationSystem__c</columns>
        <columns>FSLABB_IsActive__c</columns>
        <columns>FSLABB_Process__c</columns>
        <columns>FSLABB_Status_API_Name__c</columns>
        <columns>FSLABB_Status_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Integration Notification Statuses</pluralLabel>
</CustomObject>